--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<a href="./Pages/contact.html"><button class="btn">Contact Me</button></a>
 					</div>
 				</div>
-				<div class="devPic"><img src="./Image/atik.png" alt="atikur rahman"></div>
+				<div class="devPic"><img src="atik.png" alt="atikur rahman"></div>
 			</div>
 		</div>
 	</div>
